images and work on articles

--- a/source/_posts/2024-11-01-eidas.md
+++ b/source/_posts/2024-11-01-eidas.md
@@ -4,7 +4,7 @@ section: content
 title: "The Hitchhiker’s Guide to eIDAS: Navigating Europe’s Digital Identity Landscape"
 date: 2024-11-01
 description: Don’t Panic! If navigating Europe’s digital identity systems feels like hitchhiking across the galaxy, fear not—eIDAS (Electronic Identification, Authentication and Trust Services) is the friendly guide ensuring you won’t lose your way. In this casual tour, we’ll demystify how eIDAS works, explain its key components (from electronic IDs to digital signatures and trust providers), and show how it makes life easier across the EU. Grab your towel (metaphorically) and let’s dive in!
-cover_image: /assets/img/post-cover-image-11.png
+cover_image: /assets/images/EIDAS/cover.jpg
 featured: false
 categories: [eidas, identity, privacy, security, id]
 ---
