--- a/source/_posts/2025-01-07-spid.md
+++ b/source/_posts/2025-01-07-spid.md
@@ -4,80 +4,98 @@ section: content
 title: "Come funziona SPID: guida semplice all'identità digitale italiana"
 date: 2025-01-07
 description: Scopri cos’è SPID, come funziona e perché è essenziale per accedere ai servizi online della pubblica amministrazione. Guida chiara e aggiornata per cittadini e professionisti.
-cover_image: /assets/img/post-cover-image-18.png
+cover_image: /assets/images/SPID/spid.jpg
 featured: false
-categories: [Digital identity, id, identity, SPID, eidas, Cybersecurity, security, legal]
+categories: [ Digital identity, id, identity, SPID, eidas, Cybersecurity, security, legal ]
 ---
 
-<p>Giusto l'altro giorno parlavamo del <a href="/blog/2024-12-17-infocert-breach">data breach di InfoCert</a> e delle sue possibili implicazioni sul sistema SPID.</p>
+Proprio pochi giorni fa abbiamo parlato del [data breach di InfoCert](/blog/2024-12-17-infocert-breach) e delle possibili
+conseguenze sul sistema SPID. È quindi il momento giusto per capire meglio cos’è SPID, come funziona e perché è diventato
+così centrale nella nostra vita digitale.
 
-<p>In Italia, per accedere a numerosi servizi online della pubblica amministrazione, è necessario avere un’identità digitale: lo <strong>SPID</strong> (Sistema Pubblico di Identità Digitale). Ma cos'è esattamente SPID e come funziona? In questo articolo, ti spiego passo per passo come usarlo e perché è così importante.</p>
+---
 
-### Cos'è SPID?
+## Cos’è SPID
 
-<p>SPID è un sistema che consente di accedere in modo sicuro ai servizi online della pubblica amministrazione (come INPS, Agenzia delle Entrate, Comune, ecc.), utilizzando una sola identità digitale. In pratica, è un "account unico" che ti evita di dover ricordare credenziali diverse per ogni sito.</p>
+SPID è l’acronimo di *Sistema Pubblico di Identità Digitale*. In termini pratici, significa avere un’unica identità
+digitale che ti permette di accedere a una vasta gamma di servizi online della Pubblica Amministrazione e, sempre più
+spesso, anche di aziende private.  
+Immaginalo come un “pass universale”: invece di dover creare e ricordare decine di account diversi, ti basta un solo
+profilo con username e password, più eventualmente un codice temporaneo sullo smartphone.
 
-### Perché SPID è utile?
+Con SPID puoi, ad esempio, fare la dichiarazione dei redditi, consultare referti medici, iscriverti a un concorso
+pubblico, pagare tasse e tributi o gestire pratiche comunali senza dover passare allo sportello.
 
-<ol>
-  <li><strong>Accesso semplificato</strong>: una sola identità per tutto.</li>
-  <li><strong>Maggiore sicurezza</strong>: SPID sfrutta tecnologie come l’autenticazione a due fattori (2FA).</li>
-  <li><strong>Identità garantita</strong>: puoi fare operazioni online ufficiali, come inviare dichiarazioni fiscali o iscriverti a concorsi pubblici.</li>
-</ol>
+---
 
-### Come funziona SPID?
+## Perché è utile
 
-<p>Ecco i passaggi principali:</p>
+Il valore di SPID sta tutto nella combinazione tra semplicità e sicurezza.  
+Da un lato rende la vita più comoda: un solo accesso per tutto. Dall’altro aumenta la protezione dei tuoi dati grazie a
+diversi livelli di autenticazione.
 
-<ol>
-  <li><strong>Registrazione</strong>: tramite un Identity Provider (Poste, Aruba, Sielte, ecc.), con verifica dell’identità.</li>
-  <li><strong>Autenticazione</strong>: inserisci username, password e codice temporaneo sul tuo smartphone.</li>
-  <li><strong>Accesso ai servizi</strong>: una volta autenticato, accedi a servizi pubblici e privati aderenti a SPID.</li>
-</ol>
+- **Livello 1**: username e password.
+- **Livello 2**: aggiunge l’autenticazione a due fattori (un codice temporaneo generato da app o inviato via SMS).
+- **Livello 3**: richiede anche un dispositivo fisico, come una smartcard o un token crittografico.
 
-### Architettura di SPID
+Più il livello è alto, più forte è la garanzia sull’identità dell’utente. Non a caso SPID è conforme al regolamento
+europeo **eIDAS**, che stabilisce regole comuni per le identità digitali in tutta l’Unione.
 
-<p>SPID si basa su tre componenti fondamentali:</p>
+---
 
-<ol>
-  <li><strong>Identity Provider (IdP)</strong>: autentica l’utente e rilascia le credenziali.</li>
-  <li><strong>Service Provider (SP)</strong>: fornisce i servizi online (es. INPS, Comuni, etc.).</li>
-  <li><strong>AgID</strong>: l’autorità che regola e certifica il sistema SPID.</li>
-</ol>
+## Come funziona nella pratica
 
-### Flusso di Autenticazione SPID
+Il percorso tipico parte dalla **registrazione** presso un *Identity Provider* (Poste Italiane, Aruba, TIM, Sielte e
+altri), che verifica i tuoi documenti e ti rilascia le credenziali. Da quel momento puoi usare SPID per accedere a tutti
+i servizi aderenti.
 
-<drupal-media data-entity-type="media" data-entity-uuid="1b9d397c-978f-4b23-b1f5-30c7ac8adc56" data-align="center" data-view-mode="large">&nbsp;</drupal-media>
+Quando entri in un sito o in un’app con SPID, succede questo:
 
-<p>Il processo di autenticazione SPID prevede:</p>
+1. Clicchi sul pulsante “Entra con SPID”.
+2. Vieni reindirizzato al tuo Identity Provider.
+3. Inserisci le credenziali (username e password) e, se richiesto, il codice temporaneo.
+4. L’Identity Provider genera un **token di autenticazione**, cioè una sorta di biglietto digitale che certifica la tua
+   identità.
+5. Il sito che stai visitando controlla il token e, se valido, ti apre l’accesso.
 
-<ol>
-  <li><strong>Accesso al sito SP</strong> -> Redirect all’IdP.</li>
-  <li><strong>Login all’IdP</strong> -> Verifica con username, password, 2FA.</li>
-  <li><strong>Token di autenticazione</strong> -> rilasciato dall’IdP con attributi certificati.</li>
-  <li><strong>Verifica token</strong> -> SP controlla e autorizza l’accesso.</li>
-  <li><strong>Accesso</strong> -> L’utente può usare i servizi richiesti.</li>
-</ol>
+![SPID SAML2 Protocol](/assets/images/SPID/spid-saml2.png)
 
-### 2FA e Livelli di Sicurezza
+Questo meccanismo garantisce che i tuoi dati non vengano sparsi ovunque: è sempre il tuo Identity Provider a gestire e
+confermare chi sei, e i servizi che usi ricevono solo le informazioni strettamente necessarie.
 
-<p>SPID supporta tre livelli di sicurezza, in conformità con il regolamento europeo <strong>eIDAS</strong>:</p>
+---
 
-<ul>
-  <li><strong>Livello 1</strong>: username + password</li>
-  <li><strong>Livello 2</strong>: + codice temporaneo (2FA)</li>
-  <li><strong>Livello 3</strong>: + dispositivo fisico (es. smartcard)</li>
-</ul>
+## Chi fa cosa dentro SPID
 
-### Tecnologie e Standard Utilizzati
+Il sistema si regge su tre attori principali:
 
-<ul>
-  <li><strong>SAML 2.0</strong>: per la federazione dell’identità</li>
-  <li><strong>OpenID Connect</strong>: autenticazione basata su token</li>
-  <li><strong>TLS</strong>: comunicazioni criptate</li>
-  <li><strong>Crittografia asimmetrica</strong>: firma e verifica dei token</li>
-</ul>
+- Gli **Identity Provider (IdP)**: sono quelli che ti rilasciano SPID e gestiscono le tue credenziali.
+- I **Service Provider (SP)**: sono i siti e le piattaforme che permettono l’accesso tramite SPID (come INPS, Comuni,
+  Agenzia delle Entrate, ma anche banche o aziende private).
+- L’**AgID**: l’Agenzia per l’Italia Digitale, che stabilisce regole, certifica i provider e vigila sul funzionamento
+  dell’intero sistema.
 
-### Infine
+---
 
-<p>SPID è un sistema <strong>sicuro, federato e interoperabile</strong> che semplifica l’accesso ai servizi digitali italiani, riduce la necessità di gestire più credenziali e protegge l’identità degli utenti con standard internazionali.</p>
+## Le tecnologie dietro le quinte
+
+SPID non è una soluzione “fatta in casa”, ma si basa su standard internazionali collaudati:
+
+- **SAML 2.0**, usato per gestire la federazione delle identità (cioè per permettere a sistemi diversi di riconoscere la
+  stessa persona).
+- **OpenID Connect**, per l’autenticazione basata su token, più leggero e moderno.
+- **TLS**, che cifra tutte le comunicazioni per evitare intercettazioni.
+- **Crittografia asimmetrica**, che consente di firmare digitalmente i token e verificarne l’autenticità.
+
+Grazie a questi strumenti, l’intero processo è sicuro, interoperabile e conforme agli standard richiesti a livello
+europeo.
+
+---
+
+## In conclusione
+
+SPID non è semplicemente un altro account da ricordare, ma un’infrastruttura pensata per semplificare la vita digitale
+dei cittadini e rendere più sicuri i rapporti con la Pubblica Amministrazione.  
+Permette di avere meno password da gestire, operazioni più rapide e un riconoscimento valido a livello legale. In un
+Paese che punta sempre di più sulla digitalizzazione, rappresenta un tassello fondamentale per garantire accesso,
+fiducia e sicurezza nelle identità digitali.
